--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "drum-machine",
   "version": "0.1.0",
-  "homepage": "https://{david-aguiyi}.github.io/{drum-machine}",
+  "homepage": "https://david-aguiyi.github.io/drum-machine",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
